--- a/main.html
+++ b/main.html
@@ -8,8 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+<div class="tex">
+	Welcome to the world of Web development
 	
-
+</div>
 
     <script type="text/javascript" src="./script.js">
 </script>
