--- a/main.html
+++ b/main.html
@@ -8,11 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
 <div class="tex">
 	Welcome to the world of Web development
 	
 </div>
-
+</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
