--- a/main.html
+++ b/main.html
@@ -8,12 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div>
-<div class="tex">
-	Welcome to the world of Web development
-	
+<div id="text">
+  Welcome to the world of Web development
 </div>
-</div>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
